TP3/obj/EstructurasDeFraseC.output
Terminals unused in grammar

   PRESERVADA
   MODALIDAD
   PUNTUACION
   PERTENECE
   TYPEDEF
   SIZEOF
   SWITCH
   CASE
   BREAK
   CONTINUE
   CONTROLOTRA
   OPERADOR
   CONDICION
   DEFAULT


Rules useless in parser due to conflicts

   86 $@2: /* vacío */


Estado 1 conflictos: 1 reducción(ones)/reducción(ones)
Estado 3 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 15 conflictos: 1 reducción(ones)/reducción(ones)
Estado 38 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 56 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 57 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 58 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 59 conflictos: 1 reducción(ones)/reducción(ones)
Estado 82 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 92 conflictos: 1 reducción(ones)/reducción(ones)
Estado 148 conflictos: 1 reducción(ones)/reducción(ones)
Estado 149 conflictos: 1 reducción(ones)/reducción(ones)
Estado 150 conflictos: 1 reducción(ones)/reducción(ones)
Estado 161 conflictos: 1 reducción(ones)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | sentencia
    5     | sentencia '\n'
    6     | error
    7     | error ';'

    8 expresion: expresionAsignacion

    9 expresionAsignacion: expresionCondicional
   10                    | expresionUnaria operacionAsignacion expresionAsignacion

   11 operacionAsignacion: '='
   12                    | SUMADIRECTA
   13                    | RESTADIRECTA

   14 expresionCondicional: expresionOr
   15                     | expresionOr '?' expresion ':' expresion

   16 expresionOr: expresionAnd
   17            | expresionOr OR expresionAnd

   18 expresionAnd: expresionIgualdad
   19             | expresionAnd AND expresionIgualdad

   20 expresionIgualdad: expresionRelacional
   21                  | expresionIgualdad operadorComparacion expresionRelacional

   22 operadorComparacion: IGUALDAD DESIGUALDAD

   23 expresionRelacional: expresionAditiva
   24                    | expresionRelacional operadorRelacional expresionAditiva

   25 operadorRelacional: '>'
   26                   | '<'
   27                   | MENORIGUAL
   28                   | MAYORIGUAL

   29 expresionAditiva: expresionMultiplicativa
   30                 | expresionAditiva '+' expresionMultiplicativa
   31                 | expresionAditiva '-' expresionMultiplicativa

   32 expresionMultiplicativa: expresionUnaria
   33                        | expresionMultiplicativa '*' expresionUnaria
   34                        | expresionMultiplicativa '/' expresionUnaria

   35 expresionUnaria: expresionPostfijo
   36                | expresionUnaria INCREMENTO
   37                | expresionUnaria DECREMENTO
   38                | operadorUnario expresionUnaria
   39                | '-' expresionUnaria
   40                | '+' expresionUnaria
   41                | '*' expresionUnaria

   42 operadorUnario: '&'
   43               | '!'

   44 expresionPostfijo: expresionPrimaria
   45                  | expresionPostfijo '[' expresion ']'
   46                  | expresionPostfijo '(' listaDeArgumentos ')'

   47 listaDeArgumentos: argumento
   48                  | listaDeArgumentos ',' argumento

   49 argumento: expresion

   50 expresionPrimaria: CONSTANTES
   51                  | IDENTIFICADOR
   52                  | LITERAL_CADENA

   53 declaracion: declaracionVariable ';'
   54            | declaracionAsignacion ';'
   55            | declaracionFuncion ';'

   56 declaracionFuncion: TIPOS_DE_DATOS IDENTIFICADOR '(' listaDeParametros ')'
   57                   | VOID IDENTIFICADOR '(' listaDeParametros ')'

   58 definicionFuncion: TIPOS_DE_DATOS IDENTIFICADOR '(' listaDeParametros ')' sentenciaCompuesta
   59                  | VOID IDENTIFICADOR '(' listaDeParametros ')' sentenciaCompuesta

   60 listaDeParametros: /* vacío */
   61                  | parametro
   62                  | listaDeParametros ',' parametro

   63 parametro: TIPOS_DE_DATOS IDENTIFICADOR

   64 declaracionVariable: TIPOS_DE_DATOS listaDeVariables

   65 declaracionAsignacion: TIPOS_DE_DATOS listaDeVariablesAsignacion

   66 listaDeVariables: variable
   67                 | variable ',' listaDeVariables

   68 listaDeVariablesAsignacion: variableAsignacion
   69                           | variableAsignacion ',' listaDeVariablesAsignacion

   70 variable: IDENTIFICADOR

   71 variableAsignacion: IDENTIFICADOR '=' expresionAsignacion

   72 sentenciaCompuesta: '{' listaCompuesta '}'

   73 listaCompuesta: /* vacío */
   74               | line listaCompuesta

   75 sentencia: sentenciaCompuesta
   76          | sentenciaExpresion
   77          | sentenciaSeleccion
   78          | sentenciaIteracion
   79          | sentenciaSalto
   80          | declaracion
   81          | definicionFuncion

   82 sentenciaExpresion: ';'
   83                   | expresion ';'

   84 $@1: /* vacío */

   85 sentenciaSeleccion: $@1 IF '(' expresion ')' sentencia ELSE sentencia

   86 $@2: /* vacío */

   87 sentenciaSeleccion: $@2 IF '(' expresion ')' sentencia

   88 $@3: /* vacío */

   89 sentenciaIteracion: $@3 WHILE '(' expresion ')' sentencia

   90 $@4: /* vacío */

   91 sentenciaIteracion: $@4 DO sentencia WHILE '(' expresion ')' ';'

   92 $@5: /* vacío */

   93 sentenciaIteracion: $@5 FOR '(' expresionOP ';' expresionOP ';' expresionOP ')' sentenciaCompuesta

   94 sentenciaSalto: RETURN expresion ';'

   95 expresionOP: /* vacío */
   96            | expresion


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 5
'!' (33) 43
'&' (38) 42
'(' (40) 46 56 57 58 59 85 87 89 91 93
')' (41) 46 56 57 58 59 85 87 89 91 93
'*' (42) 33 41
'+' (43) 30 40
',' (44) 48 62 67 69
'-' (45) 31 39
'/' (47) 34
':' (58) 15
';' (59) 7 53 54 55 82 83 91 93 94
'<' (60) 26
'=' (61) 11 71
'>' (62) 25
'?' (63) 15
'[' (91) 45
']' (93) 45
'{' (123) 72
'}' (125) 72
error (256) 6 7
CONSTANTES (258) 50
LITERAL_CADENA (259) 52
IDENTIFICADOR (260) 51 56 57 58 59 63 70 71
TIPOS_DE_DATOS (261) 56 58 63 64 65
PRESERVADA (262)
MODALIDAD (263)
AND (264) 19
PUNTUACION (265)
INCREMENTO (266) 36
DECREMENTO (267) 37
SUMADIRECTA (268) 12
RESTADIRECTA (269) 13
OR (270) 17
VOID (271) 57 59
MAYORIGUAL (272) 28
MENORIGUAL (273) 27
PERTENECE (274)
DESIGUALDAD (275) 22
IGUALDAD (276) 22
RETURN (277) 94
IF (278) 85 87
DO (279) 91
WHILE (280) 89 91
ELSE (281) 85
FOR (282) 93
TYPEDEF (283)
SIZEOF (284)
SWITCH (285)
CASE (286)
BREAK (287)
CONTINUE (288)
CONTROLOTRA (289)
OPERADOR (290)
CONDICION (291)
DEFAULT (292)
NEG (293)
POS (294)
PUNT (295)


No terminales con las reglas donde aparecen

$accept (61)
    en la izquierda: 0
input (62)
    en la izquierda: 1 2, en la derecha: 0 2
line (63)
    en la izquierda: 3 4 5 6 7, en la derecha: 2 74
expresion (64)
    en la izquierda: 8, en la derecha: 15 45 49 83 85 87 89 91 94 96
expresionAsignacion (65)
    en la izquierda: 9 10, en la derecha: 8 10 71
operacionAsignacion (66)
    en la izquierda: 11 12 13, en la derecha: 10
expresionCondicional (67)
    en la izquierda: 14 15, en la derecha: 9
expresionOr (68)
    en la izquierda: 16 17, en la derecha: 14 15 17
expresionAnd (69)
    en la izquierda: 18 19, en la derecha: 16 17 19
expresionIgualdad (70)
    en la izquierda: 20 21, en la derecha: 18 19 21
operadorComparacion (71)
    en la izquierda: 22, en la derecha: 21
expresionRelacional (72)
    en la izquierda: 23 24, en la derecha: 20 21 24
operadorRelacional (73)
    en la izquierda: 25 26 27 28, en la derecha: 24
expresionAditiva (74)
    en la izquierda: 29 30 31, en la derecha: 23 24 30 31
expresionMultiplicativa (75)
    en la izquierda: 32 33 34, en la derecha: 29 30 31 33 34
expresionUnaria (76)
    en la izquierda: 35 36 37 38 39 40 41, en la derecha: 10 32 33
    34 36 37 38 39 40 41
operadorUnario (77)
    en la izquierda: 42 43, en la derecha: 38
expresionPostfijo (78)
    en la izquierda: 44 45 46, en la derecha: 35 45 46
listaDeArgumentos (79)
    en la izquierda: 47 48, en la derecha: 46 48
argumento (80)
    en la izquierda: 49, en la derecha: 47 48
expresionPrimaria (81)
    en la izquierda: 50 51 52, en la derecha: 44
declaracion (82)
    en la izquierda: 53 54 55, en la derecha: 80
declaracionFuncion (83)
    en la izquierda: 56 57, en la derecha: 55
definicionFuncion (84)
    en la izquierda: 58 59, en la derecha: 81
listaDeParametros (85)
    en la izquierda: 60 61 62, en la derecha: 56 57 58 59 62
parametro (86)
    en la izquierda: 63, en la derecha: 61 62
declaracionVariable (87)
    en la izquierda: 64, en la derecha: 53
declaracionAsignacion (88)
    en la izquierda: 65, en la derecha: 54
listaDeVariables (89)
    en la izquierda: 66 67, en la derecha: 64 67
listaDeVariablesAsignacion (90)
    en la izquierda: 68 69, en la derecha: 65 69
variable (91)
    en la izquierda: 70, en la derecha: 66 67
variableAsignacion (92)
    en la izquierda: 71, en la derecha: 68 69
sentenciaCompuesta (93)
    en la izquierda: 72, en la derecha: 58 59 75 93
listaCompuesta (94)
    en la izquierda: 73 74, en la derecha: 72 74
sentencia (95)
    en la izquierda: 75 76 77 78 79 80 81, en la derecha: 4 5 85 87
    89 91
sentenciaExpresion (96)
    en la izquierda: 82 83, en la derecha: 76
sentenciaSeleccion (97)
    en la izquierda: 85 87, en la derecha: 77
$@1 (98)
    en la izquierda: 84, en la derecha: 85
$@2 (99)
    en la izquierda: 86, en la derecha: 87
sentenciaIteracion (100)
    en la izquierda: 89 91 93, en la derecha: 78
$@3 (101)
    en la izquierda: 88, en la derecha: 89
$@4 (102)
    en la izquierda: 90, en la derecha: 91
$@5 (103)
    en la izquierda: 92, en la derecha: 93
sentenciaSalto (104)
    en la izquierda: 94, en la derecha: 79
expresionOP (105)
    en la izquierda: 95 96, en la derecha: 93


estado 0

    0 $accept: . input $end
    1 input: .
    2      | . input line

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line
    3 line: . '\n'
    4     | . sentencia
    5     | . sentencia '\n'
    6     | . error
    7     | . error ';'
    8 expresion: . expresionAsignacion
    9 expresionAsignacion: . expresionCondicional
   10                    | . expresionUnaria operacionAsignacion expresionAsignacion
   14 expresionCondicional: . expresionOr
   15                     | . expresionOr '?' expresion ':' expresion
   16 expresionOr: . expresionAnd
   17            | . expresionOr OR expresionAnd
   18 expresionAnd: . expresionIgualdad
   19             | . expresionAnd AND expresionIgualdad
   20 expresionIgualdad: . expresionRelacional
   21                  | . expresionIgualdad operadorComparacion expresionRelacional
   23 expresionRelacional: . expresionAditiva
   24                    | . expresionRelacional operadorRelacional expresionAditiva
   29 expresionAditiva: . expresionMultiplicativa
   30                 | . expresionAditiva '+' expresionMultiplicativa
   31                 | . expresionAditiva '-' expresionMultiplicativa
   32 expresionMultiplicativa: . expresionUnaria
   33                        | . expresionMultiplicativa '*' expresionUnaria
   34                        | . expresionMultiplicativa '/' expresionUnaria
   35 expresionUnaria: . expresionPostfijo
   36                | . expresionUnaria INCREMENTO
   37                | . expresionUnaria DECREMENTO
   38                | . operadorUnario expresionUnaria
   39                | . '-' expresionUnaria
   40                | . '+' expresionUnaria
   41                | . '*' expresionUnaria
   42 operadorUnario: . '&'
   43               | . '!'
   44 expresionPostfijo: . expresionPrimaria
   45                  | . expresionPostfijo '[' expresion ']'
   46                  | . expresionPostfijo '(' listaDeArgumentos ')'
   50 expresionPrimaria: . CONSTANTES
   51                  | . IDENTIFICADOR
   52                  | . LITERAL_CADENA
   53 declaracion: . declaracionVariable ';'
   54            | . declaracionAsignacion ';'
   55            | . declaracionFuncion ';'
   56 declaracionFuncion: . TIPOS_DE_DATOS IDENTIFICADOR '(' listaDeParametros ')'
   57                   | . VOID IDENTIFICADOR '(' listaDeParametros ')'
   58 definicionFuncion: . TIPOS_DE_DATOS IDENTIFICADOR '(' listaDeParametros ')' sentenciaCompuesta
   59                  | . VOID IDENTIFICADOR '(' listaDeParametros ')' sentenciaCompuesta
   64 declaracionVariable: . TIPOS_DE_DATOS listaDeVariables
   65 declaracionAsignacion: . TIPOS_DE_DATOS listaDeVariablesAsignacion
   72 sentenciaCompuesta: . '{' listaCompuesta '}'
   75 sentencia: . sentenciaCompuesta
   76          | . sentenciaExpresion
   77          | . sentenciaSeleccion
   78          | . sentenciaIteracion
   79          | . sentenciaSalto
   80          | . declaracion
   81          | . definicionFuncion
   82 sentenciaExpresion: . ';'
   83                   | . expresion ';'
   84 $@1: .  [IF]
   85 sentenciaSeleccion: . $@1 IF '(' expresion ')' sentencia ELSE sentencia
   86 $@2: .  [IF]
   87 sentenciaSeleccion: . $@2 IF '(' expresion ')' sentencia
   88 $@3: .  [WHILE]
   89 sentenciaIteracion: . $@3 WHILE '(' expresion ')' sentencia
   90 $@4: .  [DO]
   91 sentenciaIteracion: . $@4 DO sentencia WHILE '(' expresion ')' ';'
   92 $@5: .  [FOR]
   93 sentenciaIteracion: . $@5 FOR '(' expresionOP ';' expresionOP ';' expresionOP ')' sentenciaCompuesta
   94 sentenciaSalto: . RETURN expresion ';'

    $end            desplazar e ir al estado 2
    error           desplazar e ir al estado 3
    CONSTANTES      desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 6
    TIPOS_DE_DATOS  desplazar e ir al estado 7
    VOID            desplazar e ir al estado 8
    RETURN          desplazar e ir al estado 9
    '*'             desplazar e ir al estado 10
    '+'             desplazar e ir al estado 11
    '-'             desplazar e ir al estado 12
    '&'             desplazar e ir al estado 13
    '!'             desplazar e ir al estado 14
    '{'             desplazar e ir al estado 15
    '\n'            desplazar e ir al estado 16
    ';'             desplazar e ir al estado 17

    IF     reduce usando la regla 84 ($@1)
    IF     [reduce usando la regla 86 ($@2)]
    DO     reduce usando la regla 90 ($@4)
    WHILE  reduce usando la regla 88 ($@3)
    FOR    reduce usando la regla 92 ($@5)

    line                     ir al estado 18
    expresion                ir al estado 19
    expresionAsignacion      ir al estado 20
    expresionCondicional     ir al estado 21
    expresionOr              ir al estado 22
    expresionAnd             ir al estado 23
    expresionIgualdad        ir al estado 24
    expresionRelacional      ir al estado 25
    expresionAditiva         ir al estado 26
    expresionMultiplicativa  ir al estado 27
    expresionUnaria          ir al estado 28
    operadorUnario           ir al estado 29
    expresionPostfijo        ir al estado 30
    expresionPrimaria        ir al estado 31
    declaracion              ir al estado 32
    declaracionFuncion       ir al estado 33
    definicionFuncion        ir al estado 34
    declaracionVariable      ir al estado 35
    declaracionAsignacion    ir al estado 36
    sentenciaCompuesta       ir al estado 37
    sentencia                ir al estado 38
    sentenciaExpresion       ir al estado 39
    sentenciaSeleccion       ir al estado 40
    $@1                      ir al estado 41
    $@2                      ir al estado 42
    sentenciaIteracion       ir al estado 43
    $@3                      ir al estado 44
    $@4                      ir al estado 45
    $@5                      ir al estado 46
    sentenciaSalto           ir al estado 47


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    6 line: error .  [$end, error, CONSTANTES, LITERAL_CADENA, IDENTIFICADOR, TIPOS_DE_DATOS, VOID, RETURN, IF, DO, WHILE, FOR, '*', '+', '-', '&', '!', '{', '}', '\n', ';']
    7     | error . ';'

    ';'  desplazar e ir al estado 48

    ';'       [reduce usando la regla 6 (line)]
    $default  reduce usando la regla 6 (line)


estado 4

   50 expresionPrimaria: CONSTANTES .

    $default  reduce usando la regla 50 (expresionPrimaria)


estado 5

   52 expresionPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 52 (expresionPrimaria)


estado 6

   51 expresionPrimaria: IDENTIFICADOR .

    $default  reduce usando la regla 51 (expresionPrimaria)


estado 7

   56 declaracionFuncion: TIPOS_DE_DATOS . IDENTIFICADOR '(' listaDeParametros ')'
   58 definicionFuncion: TIPOS_DE_DATOS . IDENTIFICADOR '(' listaDeParametros ')' sentenciaCompuesta
   64 declaracionVariable: TIPOS_DE_DATOS . listaDeVariables
   65 declaracionAsignacion: TIPOS_DE_DATOS . listaDeVariablesAsignacion
   66 listaDeVariables: . variable
   67                 | . variable ',' listaDeVariables
   68 listaDeVariablesAsignacion: . variableAsignacion
   69                           | . variableAsignacion ',' listaDeVariablesAsignacion
   70 variable: . IDENTIFICADOR
   71 variableAsignacion: . IDENTIFICADOR '=' expresionAsignacion

    IDENTIFICADOR  desplazar e ir al estado 49

    listaDeVariables            ir al estado 50
    listaDeVariablesAsignacion  ir al estado 51
    variable                    ir al estado 52
    variableAsignacion          ir al estado 53


estado 8

   57 declaracionFuncion: VOID . IDENTIFICADOR '(' listaDeParametros ')'
   59 definicionFuncion: VOID . IDENTIFICADOR '(' listaDeParametros ')' sentenciaCompuesta

    IDENTIFICADOR  desplazar e ir al estado 54


estado 9

    8 expresion: . expresionAsignacion
    9 expresionAsignacion: . expresionCondicional
   10                    | . expresionUnaria operacionAsignacion expresionAsignacion
   14 expresionCondicional: . expresionOr
   15                     | . expresionOr '?' expresion ':' expresion
   16 expresionOr: . expresionAnd
   17            | . expresionOr OR expresionAnd
   18 expresionAnd: . expresionIgualdad
   19             | . expresionAnd AND expresionIgualdad
   20 expresionIgualdad: . expresionRelacional
   21                  | . expresionIgualdad operadorComparacion expresionRelacional
   23 expresionRelacional: . expresionAditiva
   24                    | . expresionRelacional operadorRelacional expresionAditiva
   29 expresionAditiva: . expresionMultiplicativa
   30                 | . expresionAditiva '+' expresionMultiplicativa
   31                 | . expresionAditiva '-' expresionMultiplicativa
   32 expresionMultiplicativa: . expresionUnaria
   33                        | . expresionMultiplicativa '*' expresionUnaria
   34                        | . expresionMultiplicativa '/' expresionUnaria
   35 expresionUnaria: . expresionPostfijo
   36                | . expresionUnaria INCREMENTO
   37                | . expresionUnaria DECREMENTO
   38                | . operadorUnario expresionUnaria
   39                | . '-' expresionUnaria
   40                | . '+' expresionUnaria
   41                | . '*' expresionUnaria
   42 operadorUnario: . '&'
   43               | . '!'
   44 expresionPostfijo: . expresionPrimaria
   45                  | . expresionPostfijo '[' expresion ']'
   46                  | . expresionPostfijo '(' listaDeArgumentos ')'
   50 expresionPrimaria: . CONSTANTES
   51                  | . IDENTIFICADOR
   52                  | . LITERAL_CADENA
   94 sentenciaSalto: RETURN . expresion ';'

    CONSTANTES      desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 6
    '*'             desplazar e ir al estado 10
    '+'             desplazar e ir al estado 11
    '-'             desplazar e ir al estado 12
    '&'             desplazar e ir al estado 13
    '!'             desplazar e ir al estado 14

    expresion                ir al estado 55
    expresionAsignacion      ir al estado 20
    expresionCondicional     ir al estado 21
    expresionOr              ir al estado 22
    expresionAnd             ir al estado 23
    expresionIgualdad        ir al estado 24
    expresionRelacional      ir al estado 25
    expresionAditiva         ir al estado 26
    expresionMultiplicativa  ir al estado 27
    expresionUnaria          ir al estado 28
    operadorUnario           ir al estado 29
    expresionPostfijo        ir al estado 30
    expresionPrimaria        ir al estado 31


estado 10

   35 expresionUnaria: . expresionPostfijo
   36                | . expresionUnaria INCREMENTO
   37                | . expresionUnaria DECREMENTO
   38                | . operadorUnario expresionUnaria
   39                | . '-' expresionUnaria
   40                | . '+' expresionUnaria
   41                | . '*' expresionUnaria
   41                | '*' . expresionUnaria
   42 operadorUnario: . '&'
   43               | . '!'
   44 expresionPostfijo: . expresionPrimaria
   45                  | . expresionPostfijo '[' expresion ']'
   46                  | . expresionPostfijo '(' listaDeArgumentos ')'
   50 expresionPrimaria: . CONSTANTES
   51                  | . IDENTIFICADOR
   52                  | . LITERAL_CADENA

    CONSTANTES      desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 6
    '*'             desplazar e ir al estado 10
    '+'             desplazar e ir al estado 11
    '-'             desplazar e ir al estado 12
    '&'             desplazar e ir al estado 13
    '!'             desplazar e ir al estado 14

    expresionUnaria    ir al estado 56
    operadorUnario     ir al estado 29
    expresionPostfijo  ir al estado 30
    expresionPrimaria  ir al estado 31


estado 11

   35 expresionUnaria: . expresionPostfijo
   36                | . expresionUnaria INCREMENTO
   37                | . expresionUnaria DECREMENTO
   38                | . operadorUnario expresionUnaria
   39                | . '-' expresionUnaria
   40                | . '+' expresionUnaria
   40                | '+' . expresionUnaria
   41                | . '*' expresionUnaria
   42 operadorUnario: . '&'
   43               | . '!'
   44 expresionPostfijo: . expresionPrimaria
   45                  | . expresionPostfijo '[' expresion ']'
   46                  | . expresionPostfijo '(' listaDeArgumentos ')'
   50 expresionPrimaria: . CONSTANTES
   51                  | . IDENTIFICADOR
   52                  | . LITERAL_CADENA

    CONSTANTES      desplazar e ir al estado 4
    LITERAL_CADENA  desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 6
    '*'             desplazar e ir al estado 10
    '+'             desplazar e ir al estado 11
    '-'             desplazar e ir al estado 12
    '&'             desplazar e ir al estado 13
    '!'             desplazar e ir al estado 14

    expresionUnaria    ir al estado 57
    operadorUnario     ir al estado 29
    expresionPostfijo  ir al estado 30
    expresionPrimaria  ir al estado 31


estado 12
